--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5"
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p 2000 -d 250 -w db.json"
+    "server": "json-server -p 2000 -d 300 -w db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
